--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -84,6 +84,9 @@ nav {
     margin-top: 7px;
   }
 }
+.container {
+  padding: 0 20px;
+}
 
 #events {
   position: absolute;
@@ -422,13 +425,14 @@ nav {
           }
           .file {
             display: flex;
-            justify-content: space-between;
+
             .faint {
               position: relative;
               background: $gray;
               height: 100px;
               display: block;
               width: 100px;
+              margin-right: 70px;
               border-radius: 5px;
               margin-top: 25px;
               input {
@@ -442,6 +446,7 @@ nav {
                 height: 36px;
                 position: absolute;
                 top: 29px;
+
                 left: 34px;
                 margin: 0;
               }
@@ -490,6 +495,135 @@ nav {
 }
 .overlay.showevent {
   display: block;
+}
+
+// THIS STYLE FOCUS MAJORLY ON MY EVENTS PAGE OF ADMIN
+
+.s_flex {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.mm_event {
+  margin-top: 50px;
+
+  .event_txt {
+    h4 {
+      font-weight: bold;
+      font-size: 22px;
+      color: #333333;
+      margin-bottom: 10px;
+    }
+    p {
+      font-weight: 600;
+      font-size: 14px;
+      line-height: 19px;
+      letter-spacing: 0.02em;
+      color: #333333;
+      margin-bottom: 30px;
+      span {
+        font-weight: 700;
+      }
+    }
+  }
+
+  .f_sort {
+    display: flex;
+    // width: 100%;
+    label {
+      font-weight: 600;
+      font-size: 16px;
+      margin-top: 10px;
+      margin-right: 30px;
+      line-height: 22px;
+      letter-spacing: 0.02em;
+      color: #333333;
+    }
+    select {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 10px 13px;
+      width: 150px;
+      border: 0;
+      height: 42px;
+      left: 200px;
+      top: 0px;
+      background: #ffffff;
+      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08);
+      border-radius: 5px;
+    }
+  }
+}
+
+.e_cards {
+  margin-top: 60px;
+  .main_card {
+    background-color: $white;
+    border-radius: 5px;
+    color: $black;
+    margin-bottom: 30px;
+    img {
+      border-radius: 5px 5px 0px 0px;
+      height: 178px;
+      object-fit: cover;
+    }
+    .card_d {
+      padding: 22px 20px;
+      h3 {
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 26px;
+        margin-bottom: 16px;
+        text-transform: capitalize;
+      }
+      p {
+        font-weight: 600;
+        font-size: 14px;
+        margin-bottom: 20px;
+        line-height: 20px;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+      }
+      .ff_sort {
+        display: flex;
+        justify-content: space-between;
+        figure {
+          display: flex;
+          img {
+            width: 22px;
+            margin-right: 10px;
+            height: 22px;
+          }
+          h4 {
+            font-weight: bold;
+            font-size: 12px;
+            line-height: 16px;
+            text-align: right;
+            margin-top: 5px;
+            letter-spacing: 0.02em;
+            text-transform: capitalize;
+          }
+        }
+      }
+      .lap {
+        margin-top: 50px;
+        img {
+          width: 40px;
+          height: 40px;
+          object-fit: cover;
+          border-radius: 50%;
+          border: 2px solid $white;
+        }
+        .f_lap {
+          position: relative;
+          left: -15px;
+        }
+      }
+    }
+  }
 }
 
 // MAX WIDTH STARTs FROM HERE
@@ -575,6 +709,9 @@ nav {
   .g_list {
     display: none;
   }
+  .mm_event .f_sort {
+    justify-content: space-between;
+  }
   .current-list {
     background: transparent;
     color: $pk;
@@ -583,6 +720,9 @@ nav {
         fill: $pk;
       }
     }
+  }
+  .f_sort {
+    width: 100%;
   }
 }
 
@@ -660,14 +800,14 @@ nav {
   }
   .s_step .aside_wrapper {
     margin-left: 71px;
-    margin-top: 942px;
-    width: 86%;
+    margin-top: 1003px;
+    width: 85%;
     position: absolute;
     right: 20px;
   }
   .s_step .map {
-    width: 86%;
-    top: 1190px;
+    width: 85%;
+    top: 1256px;
     position: absolute;
     right: 20px;
     bottom: 7px;
@@ -694,6 +834,13 @@ nav {
         margin-top: 40px;
         line-height: 27px;
       }
+
+      .search_field {
+        width: 25%;
+        background-color: $gray;
+        margin: 0;
+      }
+
       .avatar_bell {
         display: flex;
         img {
@@ -832,6 +979,32 @@ nav {
       }
     }
   }
+
+  .mm_event {
+    // background-color: yellow;
+    width: 90%;
+    position: absolute;
+    right: 0;
+    top: 73px;
+  }
+
+  .e_cards {
+    width: 90%;
+    position: absolute;
+    right: 0;
+    top: 200px;
+  }
+}
+
+@media (min-width: 660px) {
+  .e_cards {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    .main_card {
+      width: 48.5%;
+    }
+  }
 }
 
 @media (max-width: 560px) {
@@ -840,6 +1013,13 @@ nav {
   }
 }
 @media (min-width: 1024px) {
+  .container {
+    padding: 0 30px;
+  }
+  .mm_event {
+    width: 80%;
+    top: 90px;
+  }
   nav {
     @include flex-box(space-between, 20%);
     flex-direction: column;
@@ -1026,15 +1206,40 @@ nav {
   .s_step .aside_wrapper .upcoming .wrap_event .event {
     width: 100%;
   }
-
+  .overlay .backdrop {
+    padding: 135px 130px;
+  }
+  .overlay .backdrop .wrap {
+    padding: 40px 25px;
+  }
+  .submission {
+    display: flex;
+  }
+  .overlay .backdrop .wrap form .submission .b_pnk {
+    width: 70%;
+  }
+  .overlay .backdrop .wrap form .submission .b_transparent {
+    margin-top: 60px;
+  }
   .overlay {
     position: absolute;
     top: 0;
     right: 0;
     width: 80%;
   }
+  .e_cards {
+    width: 80%;
+    .main_card {
+      width: 47%;
+    }
+  }
 }
 
+@media (min-width: 1124px) {
+  .e_cards .main_card {
+    width: 32%;
+  }
+}
 @media (min-width: 1124px) {
   .s_step .map {
     width: 21%;
