--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -234,22 +234,95 @@ main .forth .card-grid .meta {
 .meta .icons .icon-text p {
   font-size: 0.75rem;
 }
+
 main .fifth {
   display: flex;
   flex-direction: column;
-  margin-top: 10rem;
-  width: 30rem;
-  line-height: 2rem;
+  margin-top: 14rem;
+  width: 100%;
+  height: 100%;
+  background-image: url(../img/Landing\ page\ images/Ellipse\ 21.png);
+  /* background-position: center; */
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 50px 30px;
+}
+
+main .fifth .top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  gap: 2rem;
+  margin-top: -10rem;
+}
+
+main .fifth .top div:first-child {
+  width: 30%;
+}
+
+main .fifth .top div:last-child {
+  width: 80%;
+}
+
+main .fifth .top img {
+  width: 50%;
+  height: auto;
+}
+
+.fifth .category h2 {
+  color: #ffffff;
+}
+
+.fifth .meta-container {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+}
+
+.fifth .meta-container .meta {
+  background-color: #ffffff;
+  border-radius: 10px;
+  padding: 2rem;
+}
+
+.fifth .category .arrow {
+  display: flex;
+  justify-content: center;
+  width: fit;
+  gap: 1rem;
+  padding: 2rem;
+}
+
+.fifth .category .arrow button {
+  border-radius: 100%;
+  width: 4rem;
+  height: 4rem;
+  border: 2px solid #fff;
+  display: grid;
+  place-items: center;
+}
+
+.fifth .category .arrow button img {
+  width: 80%;
+  height: 80%;
+}
+
+/* right */
+.fifth .category .arrow button:first-child {
+  background-color: transparent;
+}
+
+/* left */
+.fifth .category .arrow button:last-child {
+  transform: rotateY(180deg);
+  /* background-color: #ffffff; */
 }
 
 main .sixth {
-  background-image: url(../img/Landing\ page\ images/Ellipse\ 21.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding: 50px 30px 0px 30px;
   height: 100%;
 }
+
 main .sixth img {
   width: 50rem;
   justify-content: center;
@@ -257,8 +330,8 @@ main .sixth img {
   position: left;
 }
 .sixth .category h2 {
-  width: 50rem;
-  color: #ffffff;
+  /* width: 50rem; */
+  color: #cabebe;
 }
 main .sixth .meta {
   width: 100%;
@@ -279,7 +352,7 @@ main .sixth .meta {
 
 footer {
   background-color: #ffffff;
-  margin-top: 10vh;
+  /* margin-top: 10vh; */
   padding: 50px 30px 0px 30px;
   margin-bottom: auto;
 }
