--- a/niran.css
+++ b/niran.css
@@ -7,6 +7,8 @@
 
 body{
   background-color: #f4f4f4;
+  width: 100%;
+  margin: auto;
 }
 
 .yourpass{
@@ -41,20 +43,25 @@ h1{
   height: 360px;
   width: 100%;
   color: white;
-  margin-top: 0px;
+  background-image: url(images/unsplash_uf2nnANWa8Q.png);
   position: relative;
 }
 
-h2{
-  font-size: 28px;
-  margin: 90px 0px 70px 120px;
+.ourevents h2{
   position: absolute;
+  text-align: center;
+  width: 50%;
+  font-size: 25px;
+  margin-top: 100px;
+  margin-left: 90px;
 }
 
 .ourevents p{
+  position: absolute;
+  text-align: center;
   width: 70%;
-  font-weight: normal;
-  font-size: 14px;
+  font-weight: thin;
+  font-size: 15px;
   margin: 150px 0px 70px 65px;
 }
 
@@ -65,14 +72,14 @@ h2{
   background-color: white;
   color: black;
   bottom: 30px;
-  right: 10px;
+  right: 20px;
   border-radius: 3px;
 }
 
 .drop_down{
   height: 4px;
   width: 6px;
-  margin: 15px 20px 0px 70px;
+  margin: 15px 0px 0px 70px;
 }
 
 .lagos p{
@@ -90,40 +97,78 @@ h2{
 }
 
 .box{
-  height: 360px;
-  width: 90%;
-  margin: 20px auto 10px;
-  box-shadow: 0px 0px 2px rgba(0 0 0/0.2);
+ height: 360px;
+ width: 90%;
+ margin: 25px auto 0px;
+ box-shadow: 0px 0px 2px rgba(0 0 0 /0.2);
+ border-radius: 10px 10px 0px 0px;
 }
 
-
-.one{
-  margin-top: 40px;
+.box img{
+  height: 40vh;
+  width: 100%;
+  border-radius: 10px 10px 0px 0px;
 }
 
-.main .box p:nth-child(1){
+.box p{
+  margin-left: 20px;
+}
+
+.box p:nth-child(2){
   font-weight: bold;
 }
 
-.main .box p:nth-child(2){
-  font-weight:normal;
-}
-
-
-.one{
-  position: relative;
-}
-
-.one img{
-  height: 120px;
+.dls{
+  display: flex;
+  justify-content: space-evenly;
   width: 100%;
-  position: absolute;
+  margin: 10px 0px 0px -10px;
 }
 
+.date{
+  display: flex;
+}
 
-.main .one p:nth-child(2){
-  font-weight:normal;
-  margin: 250px 40px 70px 20px;
-  font-size: 13px;
-  position: absolute;
+.dls .date img{
+  height: 18px;
+  width: 18px;
+}
+
+.dls .date p{
+  font-size: 10px;
+  margin-left: 3px;
+  margin-top: 3px;
+}
+
+.location{
+  display: flex;
+}
+
+.dls .location img{
+  height: 18px;
+  width: 18px;
+}
+
+.dls .location p{
+  font-size: 10px;
+  margin-left: 3px;
+  margin-top: 3px;
+}
+
+.seats{
+  display: flex;
+}
+
+.dls .seats img{
+  height: 18px;
+  width: 18px;
+}
+
+.dls .seats p{
+  font-size: 10px;
+  margin-left: 3px;
+  margin-top: 3px;
+}
+
+@media screen and (max-width: 800px){
 }
