--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -594,7 +594,7 @@ nav {
           display: flex;
           img {
             width: 22px;
-            margin-right: 10px;
+            margin-right: 2px;
             height: 22px;
           }
           h4 {
@@ -621,6 +621,114 @@ nav {
           position: relative;
           left: -15px;
         }
+      }
+    }
+  }
+}
+
+// EVENTS DETAILS
+.detail_wrap {
+  .back-img {
+    a {
+      font-weight: bold;
+      font-size: 16px;
+      line-height: 22px;
+      text-align: right;
+      letter-spacing: 0.014em;
+      text-transform: capitalize;
+      // margin-bottom: 30px;
+      &::before {
+        content: url("images/chevron_back.svg");
+        background-color: url(images/chevron_back.svg);
+        margin-right: 10px;
+        width: 40px;
+        height: 40px;
+      }
+    }
+    img {
+      border-radius: 5px;
+      margin-top: 20px;
+    }
+  }
+  .dts {
+    margin-top: 30px;
+    position: relative;
+    button {
+      background-color: $pk;
+      height: 45px;
+      border-radius: 5px;
+      opacity: 0.8;
+      width: 130px;
+      font-weight: bold;
+      font-size: 16px;
+      line-height: 22px;
+      position: absolute;
+      right: 0;
+      top: -70px;
+      color: #eeeeee;
+      &::before {
+        content: url("images/edit.svg");
+        position: relative;
+        // position:relative;
+        z-index: 100000; /*a number that's more than the modal box*/
+        left: -50px;
+        top: 10px;
+      }
+    }
+    h3 {
+      font-weight: bold;
+      font-size: 20px;
+      line-height: 27px;
+      margin-top: 110px;
+      letter-spacing: 0.02em;
+      text-transform: capitalize;
+    }
+    h5 {
+      font-weight: bold;
+      font-size: 16px;
+      line-height: 26px;
+      margin-top: 20px;
+      letter-spacing: 0.02em;
+      text-transform: capitalize;
+    }
+    .d_date {
+      display: flex;
+      justify-content: space-between;
+      h4 {
+        font-weight: bold;
+        font-size: 18px;
+        margin-top: 25px;
+        margin-bottom: 50px;
+        line-height: 25px;
+        text-transform: capitalize;
+        span {
+          font-weight: 600;
+          font-size: 14px;
+          line-height: 19px;
+          margin-top: 5px;
+          letter-spacing: 0.02em;
+          text-transform: capitalize;
+        }
+      }
+    }
+    .t_desc {
+      h4 {
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 22px;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+      }
+      p {
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 24px;
+        letter-spacing: 0.025em;
+        text-transform: capitalize;
+        color: #333333;
+      }
+      .more_p {
+        margin-top: 15px;
       }
     }
   }
