--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -83,7 +83,8 @@ main .first {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 509px;
+  height: 550px;
+  width: auto;
 }
 main .first h1,
 main .first p {
@@ -93,11 +94,10 @@ main .first p {
   font-weight: bold;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 main .first img {
-  width: 600px;
-  margin-top: 90px;
+  width: 26rem;
+  margin-top: 50px;
 }
 main .ptext {
   justify-content: center;
@@ -155,7 +155,6 @@ main .third {
 }
 main .third img {
   width: 100%;
-  margin-right: 150px;
 }
 main .third .text p,
 main .third .text h2 {
