--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1102,6 +1102,16 @@ nav {
     right: 0;
     top: 200px;
   }
+
+  .detail_wrap {
+    width: 90%;
+    position: absolute;
+    right: 0;
+    top: 135px;
+    .d_date {
+      width: 50%;
+    }
+  }
 }
 
 @media (min-width: 660px) {
@@ -1340,6 +1350,9 @@ nav {
     .main_card {
       width: 47%;
     }
+  }
+  .detail_wrap {
+    width: 80%;
   }
 }
 
