--- a/assets/css/niran.css
+++ b/assets/css/niran.css
@@ -11,6 +11,7 @@ body{
   margin: auto;
 }
 
+/* header */
 .yourpass{
   display: flex;
   justify-content: space-between;
@@ -31,18 +32,15 @@ h1{
   margin: 0px 0px 10px -10px;
 }
 
-.p{
-  color: #d982aa;
-  margin-left: 0px;
-}
-
 .why{
   height: 30px;
   width: 30px;
   background-color: green;
   margin: 0px -10px 10px 0px;
 }
+/* Nav ends */
 
+/* Our events */
 .ourevents{
   height: 360px;
   width: 100%;
@@ -91,19 +89,24 @@ h1{
   font-size: 13px;
   margin: 9px 0px 0px -5px;
 }
+/* Our events end */
+/* header ends */
 
+/* Main1 */
 .main1{
-  margin-top: 60px;
+  margin-top: 1em;
 }
 
 .rec{
   font-weight: bold;
   margin-left: 1em;
+  margin-top: 2em;
 }
 
 .box{
  height: 360px;
  width: 90%;
+ align-self: center;
  margin: 25px auto 0px;
  box-shadow: 0px 0px 2px rgba(0 0 0 /0.2);
  border-radius: 5px 5px 0px 0px;
@@ -111,7 +114,6 @@ h1{
 }
 
 .box img{
-  /* height: 23vh;*/
   height: 150px;
   width: 100%;
   border-radius: 5px 5px 0px 0px;
@@ -176,14 +178,17 @@ h1{
   margin-left: 3px;
   margin-top: 3px;
 }
+/* Main1 end */
 
+/* Main2 */
 .main2{
-  margin-top: 3em;
+  margin-top: 1em;
 }
 
 .upcoming{
   font-weight: bold;
-  margin-left: 1.3em;
+  margin-left: 1em;
+  margin-top: 2em;
 }
 
 .icons_numbers{
@@ -200,6 +205,7 @@ h1{
   border-radius: 3px;
   padding: 6px;
 }
+/* Main2 ends */
 
 .numbers{
   margin-top: -6px;
@@ -258,7 +264,7 @@ h1{
   margin-top: 2em;
 }
 
-.last2 h3{
+.last h3{
   font-size: 15px;
 }
 
@@ -296,7 +302,6 @@ hr{
   margin: .8em;
 }
 
-
 .last5{
   display: flex;
   justify-content: space-evenly;
@@ -329,5 +334,102 @@ hr{
   margin-top: 13px;
   margin-left: -23px;
 }
-/* @media screen and (max-width: 800px){
-} */
+
+@media screen and (max-width: 768px){
+  /* ul{
+    display: none;
+  } */
+}
+
+@media screen and (min-width: 768px){
+/* Header */
+.why{
+    display: none;
+  }
+
+nav{
+  display: flex;
+  justify-content: space-between;
+}
+
+ul{
+  list-style: none;
+  margin-top: 0px;
+}
+
+ul li{
+  display: inline-block;
+  padding: 0px 20px;
+  color: black;
+}
+
+.a{
+  padding: 5px 0px;
+  height: 35px;
+  width: 70px;
+  border: 2px solid #808080;
+  background-color: white;
+  border-radius: 5px;
+}
+
+.b{
+  padding: 5px 0px;
+  height: 35px;
+  width: 70px;
+  border: none;
+  background-color: #d982aa;
+  border-radius: 5px;
+  color: white;
+}
+/* Header ends */
+
+/* First */
+.ourevents{
+  margin-top: -1em;
+}
+
+.ourevents h2{
+  margin-top: 5em;
+}
+
+.ourevents .look{
+  margin-top: 13em;
+  width: 72%;
+  margin-left: 14%;
+  margin-right: 14%;
+}
+/* First ends */
+
+.main1{
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-top: -1em;
+}
+
+.main2{
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-top: -1em;
+}
+
+.hr1{
+  display: none;
+}
+
+.last{
+  display: grid;
+  grid-template-columns: 3fr 1fr 1fr;
+}
+
+.last1 p{
+  width: 60%;
+}
+
+.last2{
+  margin-left: -100px;
+  margin-top: 15px;
+}
+
+}
