--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -824,6 +824,133 @@ nav {
     }
   }
 }
+
+// SETTINGS
+.tabs {
+  display: flex;
+  max-width: 100%;
+  flex-wrap: wrap;
+
+  .tabs_radio {
+    display: none;
+    width: 30px;
+    height: 30px;
+    &:checked + .tabs_label {
+      border-bottom: 3px solid $pk;
+      font-weight: bold;
+      font-size: 16px;
+      line-height: 22px;
+      color: #333333;
+
+      + .t_content {
+        display: initial;
+      }
+    }
+  }
+
+  .tabs_label {
+    padding: 10px 16px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 22px;
+    color: rgba(51, 51, 51, 0.8);
+    margin-right: 25px;
+  }
+
+  .t_content {
+    order: 1;
+    width: 100%;
+    display: none;
+    form {
+      margin-top: 40px;
+      h3 {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 27px;
+        margin-bottom: 30px;
+      }
+      p {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 19px;
+        letter-spacing: 0.03em;
+        span {
+          font-weight: 700;
+        }
+      }
+      .ment {
+        label {
+          font-style: normal;
+          font-weight: 600;
+          font-size: 16px;
+          line-height: 22px;
+          input {
+            margin-bottom: 20px;
+          }
+        }
+      }
+
+      button {
+        font-weight: bold;
+        font-size: 14px;
+        height: 50px;
+        width: 100%;
+        line-height: 19px;
+        margin-top: 30px;
+        letter-spacing: 0.04em;
+        border: 2px solid $pk;
+        background-color: transparent;
+        text-decoration-line: underline;
+        text-transform: capitalize;
+        color: $pk;
+      }
+    }
+
+    .add_user {
+      h3 {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 20px;
+        line-height: 27px;
+      }
+      p {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 19px;
+      }
+      button {
+        height: 50px;
+        background-color: $pk;
+        color: $white;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 22px;
+        width: 100%;
+        margin-top: 20px;
+        max-width: 350px;
+        margin-bottom: 50px;
+        position: absolute;
+        right: 20px;
+        &::before {
+          content: "+";
+          position: relative;
+          top: 3px;
+          font-weight: 400;
+          color: $white;
+          font-size: 25px;
+          margin-top: 10px;
+          margin-right: 15px;
+        }
+      }
+    }
+  }
+}
+
 // MAX WIDTH STARTs FROM HERE
 @media (max-width: 767px) {
   nav {
@@ -1216,8 +1343,7 @@ nav {
     }
   }
   .detail_wrap .back-img img {
-    height: 400px;
-
+    height: 250px;
     object-fit: cover;
   }
   .req {
